kubernetes-health/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dp-health
spec:
  replicas: 2
  selector:
    matchLabels:
      env: learn-kuber
  template:
    metadata:
      labels:
        env: learn-kuber
    spec:
      containers:
        - name: health
          image:  abelov1/otus-microservices-health:v1.0
          ports:
          - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            successThreshold: 1
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            successThreshold: 1
            failureThreshold: 10
            initialDelaySeconds: 10
            periodSeconds: 5
