kubernetes-health/service.yml
apiVersion: v1
kind: Service
metadata:
  name: sv-health
spec:
  selector:
    env: learn-kuber
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
